--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="about_details">
         <h3 class="about_title">Qui Sommes-Nous</h3>
         <p class="about_paragraph">
-          Sarl CREATIC-ALGÉRIE est entreprise de développement informatique
+          Dizart est une entreprise de développement informatique
           implantée à Bouira Composée d’une équipe jeune et qualifiée qui
           garantit la qualité du développement et l’intégrité de votre projet,
           elle prend en charge tous vos projets informatiques soit pour une
